added particles.js, needs calibration

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- END OF META INFORMATION -->
 
+
+    <!-- Particle JS -->
+    <script src="http://www.jsdelivr.com/#!particles.js"></script>
+
     <title>Quotie</title>
 
     <!-- BOOTSTRAP -->
@@ -30,6 +34,12 @@
 </head>
 
 <body>
+  <!-- Particles JS -->
+  <div id="particles-js">
+
+  <script type="text/javascript" charset="UTF-8" src="particles.js"></script>
+  <script type="text/javascript" charset="UTF-8" src="app.js"></script>
+
     <div class="container">
         <div class="row">
             <div class="col-md-12 title">
@@ -55,6 +65,7 @@
                 <a href="#" target="_blank">earthlings.. </a><i class="fa fa-hand-spock-o" style="color:#54e346;"></i>.
             </div>
         </div>
+      </div>
     </div>
 
 
@@ -67,6 +78,14 @@
 
     <!-- CUSTOM JAVASCRIPT -->
     <script src="js/scripts.js"></script>
+
+  <!--
+    <script type="text/javascript" charset="UTF-8">
+      particlesJS.load("particles-js","particles.json", function(){
+        console.log(particles.json loaded..);
+      });
+    </script>
+  -->
 </body>
 
 </html>
