added particle js as a background

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <script type="text/javascript" charset="UTF-8" src="particles.js"></script>
   <script type="text/javascript" charset="UTF-8" src="app.js"></script>
 
-    <div class="container">
+    <div class="container" id="quotebox">
         <div class="row">
             <div class="col-md-12 title">
                 <h1>Quotie</h1>
