--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <meta name="author" content="phaedonv">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!--social preview-->
+    <meta property="og:image" content="images/quotie.png">
+    <meta property='og:title' content='QUOTIE'/>
+    <meta property='og:description' content='Find Your Best Quotes'/>
+    <meta property='og:url' content='https://phaedonv.github.io/quotie/'/>
     <!-- END OF META INFORMATION -->
 
 
